--- a/manual/src/main/asciidoc/tutorial.adoc
+++ b/manual/src/main/asciidoc/tutorial.adoc
@@ -288,7 +288,7 @@ The last step is to use the newly added property to the profile to perform some 
                         "condition": {
                             "type": "profilePropertyCondition",
                             "parameterValues": {
-                                "propertyName" : "properties.pageViewCount.<scope>",
+                                "propertyName" : "properties.pageViewCount",
                                 "comparisonOperator" : "greaterThan",
                                 "propertyValueInteger" : 5
                             }
